<resources>
    <string name="app_name">Botanical Garden Minsk</string>

    <!--  Bottom menu  -->
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="info">Info</string>

    <!--  Start Screen  -->
    <string name="audio_guide">Audio guide</string>
    <string name="botanic_garden">«Botanical garden»</string>
    <string name="start">Start</string>

    <!--  Recycler View  -->
    <string name="objects">Objects</string>
    <string name="cant_update">Can\'t update data, seems there is a problem with internet</string>

    <!--  Exhibit  -->
    <string name="show_on_the_map">See on map</string>
    <string name="current_time_plug">00:00</string>
    <string name="duration_plug">01:30</string>
    <string name="_0_5">0,5</string>
    <string name="_0_75">0,75</string>
    <string name="_1_0">1,0</string>
    <string name="_1_25">1,25</string>
    <string name="_1_5">1,5</string>

    <!-- Player -->
    <string name="audio_loading_error">Audio loading error</string>
    <string name="player_error">Player error</string>
    <string name="impossible_to_extract_audio">Impossible to extract audio</string>
    <string name="volume_off">Volume off</string>

    <!--  Info  -->
    <string name="contacts_title">Contacts</string>
    <string name="address_title">Address:</string>
    <string name="address">220012, Minsk, Surhanava st., 2В</string>
    <string name="phone_numbers_title">Phone numbers:</string>
    <string name="number_1">+375 29 320 17 17</string>
    <string name="number_2">+375 17 379 69 15</string>
    <string name="email_title">Email:</string>
    <string name="email">office@cbg.org.by</string>
    <string name="site_title">Official website:</string>
    <string name="site">https://cbg.org.by/</string>

    <!--  Map  -->
    <string name="build_route">Go to the object</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoidm9ka2FrdW4iLCJhIjoiY2xsNDlzcjFiMDRiNDNwczdncm94YnN6OCJ9.kpltoznp8B0lXFM4vGEz0w</string>
    <string name="something_went_wrong">Something went wrong :(</string>

    <!--  Language  -->
    <string name="be">BE</string>
    <string name="ru">RU</string>
    <string name="en">EN</string>
</resources>