<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/white"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/speed_0_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/_0_5"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/speed_0_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/_0_75"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_0_5"/>

    <TextView
        android:id="@+id/speed_1_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/_1_0"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_0_75"/>

    <TextView
        android:id="@+id/speed_1_25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/_1_25"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_1_0"/>

    <TextView
        android:id="@+id/speed_1_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/_1_5"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_1_25"/>

</androidx.constraintlayout.widget.ConstraintLayout>