<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/white"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lang_be"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/be"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lang_ru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/ru"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:paddingVertical="8dp"
        android:paddingHorizontal="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lang_be"/>

    <TextView
        android:id="@+id/lang_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/background_popup_text"

        android:text="@string/en"
        android:textSize="16sp"
        android:textColor="@color/popup_text_color_selector"
        android:fontFamily="@font/manrope"

        android:clickable="true"
        android:focusable="true"

        android:gravity="center"

        android:paddingVertical="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lang_ru"/>

</androidx.constraintlayout.widget.ConstraintLayout>