<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:ignore="ContentDescription"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/start_stripe"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:background="@color/secondary_blue"

        app:layout_constraintBottom_toBottomOf="@id/start_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_image"
        app:layout_constraintVertical_bias="0.597" />

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_app_logo"

        android:layout_marginTop="32dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/audio_guide"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/manrope"

        android:layout_marginTop="32dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/start_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/botanic_garden"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/manrope"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_guide"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:text="@string/start"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/manrope"
        android:textColor="@color/button_text_color_selector"
        android:textStyle="bold"

        android:background="@drawable/background_start_button"
        android:stateListAnimator="@animator/button_state_list_animator"

        android:gravity="center"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/start_name"
        app:layout_constraintStart_toStartOf="@id/start_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/start_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>